--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -1,26 +1,16 @@
-
-name: Test Report
-
+name: 'Test Report'
 on:
   workflow_run:
-    workflows: ['CI']
+    workflows: ['CI']                     # runs after CI workflow
     types:
       - completed
-
 jobs:
   report:
-    name: Workflow test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2         # checkout the repo
-      - run: flutter pub get              # install packages
-      - run: flutter test  # run tests (configured to use jest-junit reporter)
-      - uses: actions/upload-artifact@v2  # upload test results
-       
+    - uses: dorny/test-reporter@v1
       with:
-        artifact: test-results
-        name: Workflow Report
-        path: 'reports/Report_test*.xml'
-        reporter: jest-junit
-        file_reporters:
-  json: reports/test-results.json
+        artifact: test-results            # artifact name
+        name: JEST Tests                  # Name of the check run which will be created
+        path: '*.xml'                     # Path to test results (inside artifact .zip)
+        reporter: jest-junit              # Format of test results
