--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -1,5 +1,7 @@
 name: 'Test Report'
 on:
+pull_request:
+   branches: [ master ]
   workflow_run:
     workflows: ['CI']                     # runs after CI workflow
     types:
