--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -1,7 +1,7 @@
 name: 'Test Report'
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
       workflow_run:
         workflows: ['CI']                     # runs after CI workflow
