--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -1,19 +1,42 @@
-name: 'Test Report'
+name: Test Report
 
 on:
   push:
-    branches: [ master ]
-      workflow_run:
-        workflows: ['CI']                     # runs after CI workflow
-    types:
-      - completed
+    branches: [ master]
+
 jobs:
-  report:
+  flutter_test:
+    name: Run flutter test
     runs-on: ubuntu-latest
     steps:
-    - uses: dorny/test-reporter@v1
-      with:
-        artifact: test-results            # artifact name
-        name: JEST Tests                  # Name of the check run which will be created
-        path: 'reports/*.xml'                     # Path to test results (inside artifact .zip)
-        reporter: jest-junit              # Format of test results
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.2'
+      - run: flutter pub get
+      - run: flutter test
+
+  build_appapk:
+    name: Build Flutter (Android)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter clean
+      - run: flutter test test_driver/bdd
+      - name: Upload apk
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: apk
+          path: build/app/outputs/flutter-apk/report.json
+          retention-days: 5
+  
