--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '2.2.2'
-      - run: flutter test
+      - run: flutter test test_driver/bdd
 
   build_appapk:
     name: Build Flutter (Android)
