--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v1
       - name: flutter run
         uses: subosito/flutter-action@v1
         with:
