--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -2,17 +2,17 @@ name: End-to-end tests
 on: [push]
 jobs:
   cypress-run:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: flutter run
-        uses: subosito/flutter-action@v1
+    runs-on: ubuntu-latest
+  steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
-          working-directory: todomvc-typescript-react
-          install-command: flutter pub get
-      - name: Upload report
-        uses: actions/upload-artifact@v2
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '2.2.2'
+      - run: flutter pub get
+      - run: flutter test
         with:
           name: cypress-cucumber-report
           path: todomvc-typescript-react/cypress/cucumber-report/
