--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -13,8 +13,30 @@ jobs:
           flutter-version: '2.2.2'
       - run: flutter pub get
       - run: flutter test
-        name: cypress-cucumber-report
-        aws_bucket: learn-cypress-cucumber-reports
-        source_dir: 'todomvc-typescript-react/cypress/cucumber-report'
-      - name: Link to report
-        run: echo "https://learn-cypress-cucumber-reports.s3-ap-southeast-2.amazonaws.com/${{steps.S3.outputs.object_key}}/index.html"
+      - name: Cucumber Report to Annotations
+  # You may pin to the exact commit or the version.
+  # uses: deblockt/cucumber-report-annotations-action@a54924706f2a7822821e99ccaae6b465830ce827
+  uses: deblockt/cucumber-report-annotations-action@v1.8
+  with:
+    # github token
+    access-token: test_driver/bdd/features/**.feature
+    # glob to cucumber json files
+    path: ./reports/report.json
+    # the check status to use on cucumber error. Can be 'success', 'neutral' or 'failure'
+    check-status-on-error: # default is failure
+    # the check status to use on cucumber undefined steps. Can be 'success', 'neutral' or 'failure'
+    check-status-on-undefined: # default is success
+    # the check status to use on cucumber pending steps. Can be 'success', 'neutral' or 'failure'
+    check-status-on-pending: # default is success
+    # the annotation status on error. Can be 'notice', 'warning', 'failure'
+    annotation-status-on-error: # optional, default is failure
+    # the annotation status on undefined steps. Can be 'notice', 'warning', 'failure'. if this property is not set, no annotation will be generated for undefined steps
+    annotation-status-on-undefined: # optional
+    # the annotation status on pending steps. Can be 'notice', 'warning', 'failure'. if this property is not set, no annotation will be generated for pending steps
+    annotation-status-on-pending: # optional
+    # if it is set to true, the number of errors will be indicated on the check title (visible on the pr check)
+    show-number-of-error-on-check-title: # optional, default is true
+    # the name of the check
+    name: # optional, default is Cucumber report
+
+       
