--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -4,16 +4,13 @@ jobs:
   cypress-run:
     runs-on: ubuntu-20.04
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
-      - name: flutter run
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-          uses: subosito/flutter-action@v1
-          flutter-version: '2.2.2'
+      - uses: subosito/flutter-action@v1
         with:
-          working-directory: report
-          install-command: flutter pub get
+          flutter-version: '2.2.2'
+      - run: flutter pub get
+      - run: flutter test
           
