--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,5 +12,4 @@ jobs:
         with:
           flutter-version: '2.2.2'
       - run: flutter pub get
-      - run: flutter test test_driver/bdd
-          
+      - run: flutter test
