--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,4 +12,5 @@ jobs:
         with:
           flutter-version: '2.2.2'
       - run: flutter pub get
-     
+      - run: cd reports/
+      - run: node reports.js
