--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -13,4 +13,4 @@ jobs:
           flutter-version: '2.2.2'
       - run: flutter pub get
       - run: cd reports/ && node report.js
-      - run: file:///E:/projeto%20test/flutter-fundamentos-aula-5/reports/report.html
+      - run: echo "file:///E:/projeto%20test/flutter-fundamentos-aula-5/reports/report.html"
