--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,8 +1,13 @@
-name: End-to-end tests
-on: [push]
+name: CI main
+
+on:
+  push:
+    branches: [ master]
+
 jobs:
-  cypress-run:
-    runs-on: ubuntu-20.04
+  flutter_test:
+    name: Run flutter test
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
@@ -12,6 +17,25 @@ jobs:
         with:
           flutter-version: '2.2.2'
       - run: flutter pub get
-      - run: dart test
-      - run: cd reports/ && node report.js
-      - run: echo "file:///E:/projeto%20test/flutter-fundamentos-aula-5/reports/report.html"
+      - run: flutter test
+
+  build_appapk:
+    name: Build Flutter (Android)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter clean
+      - run: flutter build apk
+      - name: Upload apk
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: apk
+          path: build/app/outputs/flutter-apk/app-release.apk
+          retention-days: 5
