--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,26 +17,5 @@ jobs:
         with:
           flutter-version: '2.2.2'
       - run: flutter pub get
- 
-
-  build_appapk:
-    name: Build Flutter (Android)
-    needs: [flutter_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
-      - run: flutter clean
-      - name: Generate report flutter
-        run:  cd reports && node report.js
-      - name: Upload report
-        uses: actions/upload-artifact@v2.2.4
-        with:
-          name: report
-          path: file:///E:/projeto%20test/flutter-fundamentos-aula-5/reports/report.html
-          retention-days: 5
+      - run: flutter run
+      - run: flutter test test_driver/bdd
