--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,3 +19,20 @@ jobs:
       - run: flutter pub get
       - run: flutter run
       - run: flutter test test_driver/bdd
+
+  build_appapk:
+    name: Build Flutter (Test)
+    needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter run
+      - run: flutter test test_driver/bdd
+      - name: Upload apk
+        uses: actions/upload-artifact@v2.2.4
