--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,12 +1,12 @@
-name: CI main
+name: CI dev
 
 on:
-  push:
-    branches: [ master]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   flutter_test:
-    name: Run flutter test
+    name: Run flutter test and analyze
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,24 +15,6 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.2.2'
+          flutter-version: '2.8.0'
       - run: flutter pub get
-      - run: flutter run
-      - run: flutter test test_driver/bdd
-
-  build_appapk:
-    name: Build Flutter (Test)
-    needs: [flutter_test]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
-      - run: flutter run
-      - run: flutter test test_driver/bdd
-      - name: Upload apk
-        uses: actions/upload-artifact@v2.2.4
+      - run: flutter test
