--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,20 +1,61 @@
 name: CI dev
-
 on:
+  push:
   pull_request:
-    branches: [ main ]
+    branches: [dev]
 
 jobs:
   flutter_test:
-    name: Run flutter test and analyze
+    name: Run flutter test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: '12.x'
-      - uses: subosito/flutter-action@v1
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v2.1.0
         with:
-          flutter-version: '2.8.0'
-      - run: flutter pub get
-      - run: flutter test
+          flutter-version: "2.8.0"
+      - name: Run Flutter Pub Get
+        run: flutter pub get
+      - name: Run Flutter Test
+        run: flutter test
+
+  drive_ios:
+    strategy:
+      matrix:
+        devices: ["iPhone 8", "iPhone 11"]
+      fail-fast: false
+    runs-on: macos-latest
+    needs: flutter_test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2.1.0
+        with:
+          flutter-version: "2.8.0"
+      - uses: futureware-tech/simulator-action@v1
+        with:
+          model: ${{ matrix.devices }}
+      - name: Run Flutter Driver tests on iOS
+        run: flutter test test_driver/bdd
+
+  drive_android:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        api-level: [21, 29]
+        target: [default]
+    needs: flutter_test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v2.1.0
+        with:
+          flutter-version: "2.8.0"
+      - name: Run Flutter Driver tests on android
+        uses: reactivecircus/android-emulator-runner@v2.22.0
+        with:
+          api-level: ${{ matrix.api-level }}
+          target: ${{ matrix.target }}
+          arch: x86_64
+          profile: Nexus 6
+          script: flutter test test_driver/bdd
